--- a/index.html
+++ b/index.html
@@ -17,7 +17,27 @@
                 <nav class="side-bar">
 
                     <div class="logo">
-                        <img src="" alt="">
+                        <img src="img/logo.svg" alt="logo">
+                    </div>
+
+                    <div class="button-nav">
+
+                        <ul>
+
+                            <li class="d-flex align-center border-green">
+                                <img src="img/home.svg" alt="home" class="side-bar-icon"> <span class="text-white">Home</span>
+                            </li>
+
+                            <li class="d-flex align-center">
+                                <img src="img/search.svg" alt="search" class="side-bar-icon"> <span class="text-white">Search</span>
+                            </li>
+
+                            <li class="d-flex align-center">
+                                <img src="img/libreria.svg" alt="libreria" class="side-bar-icon"> <span class="text-white">La tua libreria</span>
+                            </li>
+
+                        </ul>
+
                     </div>
 
                     <div class="playlist">
