aggiunta sidebar con relative regole css

--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/master.css">
-        <title>Document</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/master.css">
+    <title>Document</title>
+</head>
 
-    <body>
+<body>
 
-        <div class="wrapper">
+    <div class="wrapper">
 
-            <div class="main-page d-flex">
+        <div class="main-page d-flex">
 
-                <nav class="side-bar">
+            <nav class="side-bar flex-sidebar">
+
+                <div>
 
                     <div class="logo">
                         <img src="img/logo.svg" alt="logo">
@@ -24,49 +26,81 @@
 
                         <ul>
 
-                            <li class="d-flex align-center border-green">
-                                <img src="img/home.svg" alt="home" class="side-bar-icon"> <span class="text-white">Home</span>
+                            <li class="d-flex align-center border-green padding-left">
+                                <img src="img/home.svg" alt="home" class="side-bar-icon"> <span
+                                    class="text-white">&nbsp;&nbsp;Home</span>
                             </li>
 
-                            <li class="d-flex align-center">
-                                <img src="img/search.svg" alt="search" class="side-bar-icon"> <span class="text-white">Search</span>
+                            <li class="d-flex align-center padding-left">
+                                <img src="img/search.svg" alt="search" class="side-bar-icon"> <span
+                                    class="text-white">&nbsp;&nbsp;Search</span>
                             </li>
 
-                            <li class="d-flex align-center">
-                                <img src="img/libreria.svg" alt="libreria" class="side-bar-icon"> <span class="text-white">La tua libreria</span>
+                            <li class="d-flex align-center padding-left">
+                                <img src="img/libreria.svg" alt="libreria" class="side-bar-icon"> <span
+                                    class="text-white">&nbsp;&nbsp;La tua libreria</span>
                             </li>
 
                         </ul>
 
                     </div>
 
-                    <div class="playlist">
+                    <div class="playlist padding-sidebar">
 
-                    </div>
+                        <h4 class="text-white margine-top">PLAYLIST</h4>
 
-                    <!--installa app-->
-                    <div>
+                        <div class="d-flex align-center margine-top">
+                            <div class="add-playlist">&plus;</div>
+                            <span class="text-white">&nbsp;&nbsp;Crea Playlist</span>
+                        </div>
 
-                    </div>
-
-                </nav>
-
-                <div class="content-page">
-
-                    <div class="call-to-action">
+                        <ul class="margine-top">
+                            <li class="text-white margine-top">Nome Playlist</li>
+                            <li class="text-white margine-top">Nome Playlist</li>
+                            <li class="text-white margine-top">Nome Playlist</li>
+                            <li class="text-white margine-top">Nome Playlist</li>
+                            <li class="text-white margine-top">Nome Playlist</li>
+                            <li class="text-white margine-top">Nome Playlist</li>
+                            <li class="text-white margine-top">Nome Playlist</li>
+                        </ul>
 
                     </div>
 
                 </div>
 
-            </div>
 
-            <div class="playbar">
+                <!--installa app john doe-->
+                <div class="padding-sidebar">
+
+                    <div class="d-flex align-center border-bottom-grey">
+                        <img src="img/download.svg" alt="download" class="download-img"><span
+                            class="text-white">&nbsp;&nbsp;Installa app</span>
+                    </div>
+
+                    <div class="d-flex align-center margine-top">
+                        <img src="img/profile.svg" alt="profile" class="profile-img"><span class="text-white">&nbsp;&nbsp;Goku</span>
+                    </div>
+
+                </div>
+
+            </nav>
+
+            <div class="content-page">
+
+                <div class="call-to-action">
+                    
+                </div>
 
             </div>
 
         </div>
 
-    </body>
+        <div class="playbar">
+
+        </div>
+
+    </div>
+
+</body>
 
 </html>
