--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com%22%3E/
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
     <title>Document</title>
 </head>
@@ -87,9 +91,104 @@
 
             <div class="content-page">
 
-                <div class="call-to-action">
-                    
+                <div class="call-to-action flex-end">
+                    <span class="upgrade-button">EFFETTUA L'UPGRADE</span>
                 </div>
+
+                <nav class="flex-center">
+
+                    <ul class="text-white flex-between">
+                        <li class="padding-left font-nav">IN EVIDENZA</li>
+                        <li class="padding-left font-nav">PODCAST</li>
+                        <li class="padding-left font-nav">CLASSIFICHE</li>
+                        <li class="padding-left font-nav">GENERI E MOOD</li>
+                        <li class="padding-left font-nav">NUOVE USCITE</li>
+                        <li class="padding-left font-nav">SCOPRI</li>
+                    </ul>
+
+                </nav>
+
+                <section class="padding-section">
+                    
+                    <h2 class="text-white">Recently played</h2>
+
+                    <div class="card-container flex-wrap margine-top">
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                            </div>
+
+                            <div class="card-content">
+
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                            </div>
+
+                            <div class="card-content">
+
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                            </div>
+
+                            <div class="card-content">
+
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                            </div>
+
+                            <div class="card-content">
+
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                            </div>
+
+                            <div class="card-content">
+
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                            </div>
+
+                            <div class="card-content">
+
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </section>
 
             </div>
 
