--- a/index.html
+++ b/index.html
@@ -117,11 +117,12 @@
                         <div class="card">
 
                             <div class="card-img">
-                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
                             </div>
 
                             <div class="card-content">
-
+                                <h3 class="text-white text-center">Heavy metal</h3>
+                                <div class="text-grey text-center">Subtitle</div>
                             </div>
 
                         </div>
@@ -129,11 +130,12 @@
                         <div class="card">
 
                             <div class="card-img">
-                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
                             </div>
 
                             <div class="card-content">
-
+                                <h3 class="text-white text-center">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack)</h3>
+                                <div class="text-grey text-center">Kyle Dixon & Michael Stein</div>
                             </div>
 
                         </div>
@@ -141,11 +143,12 @@
                         <div class="card">
 
                             <div class="card-img">
-                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
                             </div>
 
                             <div class="card-content">
-
+                                <h3 class="text-white text-center">A Quite Place</h3>
+                                <div class="text-grey text-center">Subtitle</div>
                             </div>
 
                         </div>
@@ -153,11 +156,12 @@
                         <div class="card">
 
                             <div class="card-img">
-                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
                             </div>
 
                             <div class="card-content">
-
+                                <h3 class="text-white text-center">Split</h3>
+                                <div class="text-grey text-center">Subtitle</div>
                             </div>
 
                         </div>
@@ -165,11 +169,12 @@
                         <div class="card">
 
                             <div class="card-img">
-                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
                             </div>
 
                             <div class="card-content">
-
+                                <h3 class="text-white text-center">A cure for wellness</h3>
+                                <div class="text-grey text-center">Subtitle</div>
                             </div>
 
                         </div>
@@ -177,11 +182,86 @@
                         <div class="card">
 
                             <div class="card-img">
-                                <img src="img/Goku-Bye-Bye-Gohan.gif" alt="Goku" class="goku">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
                             </div>
 
                             <div class="card-content">
+                                <h3 class="text-white text-center">Sinister</h3>
+                                <div class="text-grey text-center">Subtitle</div>
+                            </div>
 
+                        </div>
+
+                    </div>
+
+                </section>
+
+                <section class="padding-section">
+
+                    <h2 class="text-white">Creato per Goku</h2>
+                    <span class="text-grey">Piú ascolti, piú saranno accurati i suggerimenti</span>
+
+                    <div class="card-container flex-wrap margine-top">
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                            </div>
+
+                            <div class="card-content">
+                                <h3 class="text-white text-center">Heavy metal</h3>
+                                <div class="text-grey text-center">Subtitle</div>
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                            </div>
+
+                            <div class="card-content">
+                                <h3 class="text-white text-center">Heavy metal</h3>
+                                <div class="text-grey text-center">Subtitle</div>
+                            </div>
+
+                        </div>
+
+                    </div>
+
+                </section>
+
+                <section class="padding-section">
+
+                    <h2 class="text-white">Artisti piú popolari</h2>
+                    <span class="text-grey">Piú ascolti, piú saranno accurati i suggerimenti</span>
+
+                    <div class="card-container flex-wrap margine-top">
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album card-rounded">
+                            </div>
+
+                            <div class="card-content">
+                                <h3 class="text-white text-center">Heavy metal</h3>
+                                <div class="text-grey text-center">Subtitle</div>
+                            </div>
+
+                        </div>
+
+                        <div class="card">
+
+                            <div class="card-img">
+                                <img src="img/aquietplace.jpeg" alt="Quite" class="album card-rounded">
+                            </div>
+
+                            <div class="card-content">
+                                <h3 class="text-white text-center">Heavy metal</h3>
+                                <div class="text-grey text-center">Subtitle</div>
                             </div>
 
                         </div>
