aggiunta playbar (da sistemare)

--- a/index.html
+++ b/index.html
@@ -274,7 +274,59 @@
 
         </div>
 
-        <div class="playbar">
+        <div class="playbar padding-section flex-between">
+
+            <div class="d-flex align-center">
+
+                <div class="d-flex align-center">
+                    <img src="img/sinister.jpeg" alt="sinister" class="playbar-img">
+
+                    <div class="padding-song">
+                        <h5 class="text-white">Sinister</h5>
+                        <span class="text-grey song-name">Nome brano</span>
+                    </div>
+
+                </div>
+
+                <div class="padding-left">
+                    <span class="text-grey"><i class="fa-regular fa-heart"></i></span>
+                    <span class="text-grey">&nbsp; &nbsp; &nbsp;<i class="fa-regular fa-folder"></i></span>
+                </div>
+
+            </div>
+
+            <div>
+
+                <ul class="flex-between text-white">
+                    <li class="padding-left playbar-icon"><i class="fa-solid fa-shuffle"></i></li>
+                    <li class="padding-left playbar-icon"><i class="fa-solid fa-backward-step"></i></li>
+                    <li class="padding-left playbar-play"><i class="fa-regular fa-circle-play"></i></li>
+                    <li class="padding-left playbar-icon"><i class="fa-solid fa-forward-step"></i></li>
+                    <li class="padding-left padding-right playbar-icon"><i class="fa-solid fa-rotate-right"></i></li>
+                </ul>
+
+                <ul class="flex-between margine-top">
+
+                    <li class="text-white">0:25</li>
+
+                    <li class="padding-left"><input type="range" name="song" id="song" class="barra1"></li>
+
+                    <li class="text-white padding-left">4:35</li>
+
+                </ul>
+
+            </div>
+
+            <div>
+
+                <ul class="flex-between text-white">
+                    <li class="padding-left"><i class="fa-solid fa-list-ul"></i></li>
+                    <li class="padding-left"><i class="fa-solid fa-display"></i></li>
+                    <li class="padding-left"><i class="fa-solid fa-volume-high"></i></li>
+                    <li class="padding-left"><input type="range" id="vol" name="vol"></li>
+                </ul>
+
+            </div>
 
         </div>
 
