--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
                 <div>
 
                     <div class="logo">
-                        <img src="img/logo.svg" alt="logo">
+                        <img src="img/logo.svg" alt="logo" class="scomparisci">
+                        <img src="img/logo-small.svg" alt="logo" class="none">
                     </div>
 
                     <div class="button-nav">
@@ -32,24 +33,24 @@
 
                             <li class="d-flex align-center border-green padding-left">
                                 <img src="img/home.svg" alt="home" class="side-bar-icon"> <span
-                                    class="text-white">&nbsp;&nbsp;Home</span>
+                                    class="text-white scomparisci">&nbsp;&nbsp;Home</span>
                             </li>
 
                             <li class="d-flex align-center padding-left">
                                 <img src="img/search.svg" alt="search" class="side-bar-icon"> <span
-                                    class="text-white">&nbsp;&nbsp;Search</span>
+                                    class="text-white scomparisci">&nbsp;&nbsp;Search</span>
                             </li>
 
                             <li class="d-flex align-center padding-left">
                                 <img src="img/libreria.svg" alt="libreria" class="side-bar-icon"> <span
-                                    class="text-white">&nbsp;&nbsp;La tua libreria</span>
+                                    class="text-white scomparisci">&nbsp;&nbsp;La tua libreria</span>
                             </li>
 
                         </ul>
 
                     </div>
 
-                    <div class="playlist padding-sidebar">
+                    <div class="playlist padding-sidebar scomparisci">
 
                         <h4 class="text-white margine-top">PLAYLIST</h4>
 
@@ -76,13 +77,13 @@
                 <!--installa app john doe-->
                 <div class="padding-sidebar">
 
-                    <div class="d-flex align-center border-bottom-grey">
+                    <div class="d-flex align-center border-bottom-grey scomparisci">
                         <img src="img/download.svg" alt="download" class="download-img"><span
                             class="text-white">&nbsp;&nbsp;Installa app</span>
                     </div>
 
                     <div class="d-flex align-center margine-top">
-                        <img src="img/profile.svg" alt="profile" class="profile-img"><span class="text-white">&nbsp;&nbsp;Goku</span>
+                        <img src="img/profile.svg" alt="profile" class="profile-img"><span class="text-white scomparisci">&nbsp;&nbsp;Goku</span>
                     </div>
 
                 </div>
@@ -95,7 +96,7 @@
                     <span class="upgrade-button">EFFETTUA L'UPGRADE</span>
                 </div>
 
-                <nav class="flex-center">
+                <nav class="flex-center nav-top">
 
                     <ul class="text-white flex-between">
                         <li class="padding-left font-nav">IN EVIDENZA</li>
