--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
                 <nav class="flex-center nav-top">
 
-                    <ul class="text-white flex-between">
+                    <ul class="text-white flex-between wrap">
                         <li class="padding-left font-nav">IN EVIDENZA</li>
                         <li class="padding-left font-nav">PODCAST</li>
                         <li class="padding-left font-nav">CLASSIFICHE</li>
@@ -277,7 +277,7 @@
 
         <div class="playbar padding-section flex-between">
 
-            <div class="d-flex align-center">
+            <div class="d-flex align-center sx">
 
                 <div class="d-flex align-center">
                     <img src="img/sinister.jpeg" alt="sinister" class="playbar-img">
@@ -296,7 +296,7 @@
 
             </div>
 
-            <div>
+            <div class="middle">
 
                 <div>
                     <ul class="d-flex align-center justify-center text-white gap15">
@@ -309,7 +309,7 @@
                 </div>
                 
                 <div>
-                    <ul class="flex-between margine-top">
+                    <ul class="flex-between margine-top" id="barra-numeri">
 
                         <li class="text-white">0:25</li>
 
@@ -323,7 +323,7 @@
 
             </div>
 
-            <div>
+            <div class="dx">
 
                 <ul class="flex-between align-center text-white">
                     <li class="padding-left"><i class="fa-solid fa-list-ul"></i></li>
