aggiunti effetti hover sulla sidebar

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                                     class="text-white scomparisci">&nbsp;&nbsp;Home</span>
                             </li>
 
-                            <li class="d-flex align-center padding-left">
+                            <li class="d-flex align-center border-green padding-left">
                                 <img src="img/search.svg" alt="search" class="side-bar-icon"> <span
                                     class="text-white scomparisci">&nbsp;&nbsp;Search</span>
                             </li>
 
-                            <li class="d-flex align-center padding-left">
+                            <li class="d-flex align-center border-green padding-left">
                                 <img src="img/libreria.svg" alt="libreria" class="side-bar-icon"> <span
                                     class="text-white scomparisci">&nbsp;&nbsp;La tua libreria</span>
                             </li>
@@ -59,7 +59,7 @@
                             <span class="text-white">&nbsp;&nbsp;Crea Playlist</span>
                         </div>
 
-                        <ul class="margine-top">
+                        <ul class="margine-top nome-playlist">
                             <li class="text-white margine-top">Nome Playlist</li>
                             <li class="text-white margine-top">Nome Playlist</li>
                             <li class="text-white margine-top">Nome Playlist</li>
@@ -99,7 +99,7 @@
                 <nav class="flex-center nav-top">
 
                     <ul class="text-white flex-between wrap">
-                        <li class="padding-left font-nav">IN EVIDENZA</li>
+                        <li class="padding-left font-nav">IN EVIDENZA <div class="div-green"></div></li>
                         <li class="padding-left font-nav">PODCAST</li>
                         <li class="padding-left font-nav">CLASSIFICHE</li>
                         <li class="padding-left font-nav">GENERI E MOOD</li>
