aggiunto effetto hover per lista sopra la content page

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
 
                     <ul class="text-white flex-between wrap">
                         <li class="padding-left font-nav">IN EVIDENZA <div class="div-green"></div></li>
-                        <li class="padding-left font-nav">PODCAST</li>
-                        <li class="padding-left font-nav">CLASSIFICHE</li>
-                        <li class="padding-left font-nav">GENERI E MOOD</li>
-                        <li class="padding-left font-nav">NUOVE USCITE</li>
-                        <li class="padding-left font-nav">SCOPRI</li>
+                        <li class="padding-left font-nav">PODCAST <div class="div-green"></div></li>
+                        <li class="padding-left font-nav">CLASSIFICHE <div class="div-green"></div></li>
+                        <li class="padding-left font-nav">GENERI E MOOD <div class="div-green"></div></li>
+                        <li class="padding-left font-nav">NUOVE USCITE <div class="div-green"></div></li>
+                        <li class="padding-left font-nav">SCOPRI <div class="div-green"></div></li>
                     </ul>
 
                 </nav>
