aggiunto hover album

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
@@ -132,6 +133,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
@@ -145,6 +147,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
@@ -158,6 +161,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
@@ -171,6 +175,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
@@ -184,6 +189,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
@@ -208,6 +214,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
@@ -221,6 +228,7 @@
 
                             <div class="card-img">
                                 <img src="img/aquietplace.jpeg" alt="Quite" class="album">
+                                <div class="boack"><i class="fa-regular fa-circle-play"></i></div>
                             </div>
 
                             <div class="card-content">
